# onnxruntime_minimal_static

./: CMakeLists.txt  README.md  fns_candy_style_transfer.c  image_file.h  vcpkg-configuration.json  vcpkg.json
eigen3/: portfile.cmake
onnxruntime/: portfile.cmake  vcpkg.json
ports/onnx/: portfile.cmake  vcpkg.json
ports/onnxruntime/: portfile.cmake  vcpkg.json
